--- a/styles/css/app.css
+++ b/styles/css/app.css
@@ -17,6 +17,10 @@ a {
     font-size: 17px;
   }
 }
+.info:nth-of-type(1) {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
 .info p {
   font-size: 20px;
 }
@@ -28,7 +32,7 @@ a {
 }
 @media screen and (min-width: 710px) {
   .info p {
-    width: 550px;
+    width: 536px;
   }
 }
 @media screen and (min-width: 900px) {
@@ -83,7 +87,6 @@ ul {
 .bloc-navigation .pdp img {
   width: 130px;
   height: 130px;
-  border: 2px solid green;
   border-radius: 50%;
 }
 @media screen and (max-width: 700px) {
