--- a/styles/sass/typography.scss
+++ b/styles/sass/typography.scss
@@ -14,6 +14,12 @@ a {
     }
 }
 
+.info{
+    &:nth-of-type(1){
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+}
+
 .info p{
     font-size: 20px;
     @include responsive(700px){
@@ -21,7 +27,7 @@ a {
         width: 220px;
     }
     @include responsive(710px){
-        width: 550px;
+        width: 536px;
     }
     @include responsive(900px){
         width: 1000px;
