--- a/styles/sass/typography.scss
+++ b/styles/sass/typography.scss
@@ -2,38 +2,36 @@ a {
     text-decoration: none;
 }
 
-.info h1{
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;
-    @include responsive(700px){
-        font-size: 20px;
-    }
-    @include responsive(400px){
-        font-size: 17px;
-    }
-}
-
 .info{
     &:nth-of-type(1){
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
-}
-
-.info p{
-    font-size: 20px;
-    @include responsive(700px){
-        font-size: 15px;
-        width: 220px;
+    h1{
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 35px;
+        @include responsive(700px){
+            font-size: $fontSize;
+        }
+        @include responsive(400px){
+            font-size: 17px;
+        }
     }
-    @include responsive(710px){
-        width: 536px;
-    }
-    @include responsive(900px){
-        width: 1000px;
-    }
-    @include responsive(400px){
-        font-size: 14px;
-        width: 155px;
+    p{
+        font-size: $fontSize;
+        @include responsive(700px){
+            font-size: 15px;
+            width: 220px;
+        }
+        @include responsive(710px){
+            width: 536px;
+        }
+        @include responsive(900px){
+            width: 1000px;
+        }
+        @include responsive(400px){
+            font-size: 14px;
+            width: 155px;
+        }
     }
 }
